test/tests/stages/13_floating-point_numbers/valid/libraries/use_arg_after_fun_call_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  double
  identifier(fun)
  (
  double
  identifier(x)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(fun)
  (
  const double(1.0)
  )
  ;
  }
