test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/bitwise_xor.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const double(1e10)
  ^
  -
  const double(1e10)
  ;
  }
